Assignment2-Node-template-2-template-1714141336096.yaml
---
Metadata:
  TemplateId: "arn:aws:cloudformation:us-east-1:635638247318:generatedTemplate/6f02da29-6926-4ce6-a68e-655716a38a4a"
Resources:
  EC2DHCPOptions00dopt015de2090e3cc2b1600ySD7d:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::DHCPOptions"
    DeletionPolicy: "Retain"
    Properties:
      DomainName: "ec2.internal"
      DomainNameServers:
      - "AmazonProvidedDNS"
      Tags: []
  EC2Route00rtb05c65b04846b1b8e600SDEMX:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb05c65b04846b1b8e600rXajJ"
      DestinationCidrBlock:
        Fn::GetAtt:
        - "EC2VPC00vpc03ab091f2971e59d6008M0us"
        - "CidrBlock"
      GatewayId: "local"
      VpcEndpointId: "local"
  EC2SubnetRouteTableAssociation00rtbassoc0ed10b911d5acd14300PvU6G:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0e3327c5663eb64a100NGCi7"
      SubnetId:
        Ref: "EC2Subnet00subnet0a9dec7516571db8800zmx6h"
  EC2Subnet00subnet0d07ba7c6b47d43fc000wnZ8:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      MapPublicIpOnLaunch: true
      EnableDns64: false
      AvailabilityZoneId: "use1-az1"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.0.0.0/20"
      Ipv6Native: false
      Tags:
      - Value: "assignment2-subnet-public1-us-east-1a"
        Key: "Name"
  EC2NetworkInterface00eni08f383d5145d10aca00z2Hsr:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterface"
    DeletionPolicy: "Retain"
    Properties:
      Description: ""
      PrivateIpAddress: "10.0.128.235"
      PrivateIpAddresses:
      - PrivateIpAddress: "10.0.128.235"
        Primary: true
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - "sg-04ebafea13fce1e9e"
      Ipv6Prefixes: []
      SubnetId:
        Ref: "EC2Subnet00subnet0edb10712a7d3c02400nWl5Q"
      SourceDestCheck: true
      InterfaceType: "interface"
      Tags: []
  EC2NetworkAcl00acl0bd442c4e60a65a5000sjDiG:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkAcl"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      Tags: []
  EC2SubnetNetworkAclAssociation00aclassoc09eaa7a70c78a0c4a00nWqXJ:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl00acl0bd442c4e60a65a5000sjDiG"
      SubnetId:
        Ref: "EC2Subnet00subnet017bf12d9935bedcc00Zr3t0"
  EC2InternetGateway00igw0cd3c759ebd09417c00e7emN:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::InternetGateway"
    DeletionPolicy: "Retain"
    Properties:
      Tags:
      - Value: "assignment2-igw"
        Key: "Name"
  EC2SecurityGroup00sg05ae7e01502c4135800apNO0:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "allows http and https access "
      GroupName: "LoadBalancerSG"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      SecurityGroupIngress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 80
        ToPort: 80
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 3001
        ToPort: 3001
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 3000
        ToPort: 3000
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 443
        ToPort: 443
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      Tags:
      - Value: "LoadBalancerSG"
        Key: "Name"
  EC2Route00rtb0c4bc7b1b0ad3238000D6q6D:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0c4bc7b1b0ad3238000hzzeY"
      DestinationCidrBlock:
        Fn::GetAtt:
        - "EC2VPC00vpc03ab091f2971e59d6008M0us"
        - "CidrBlock"
      GatewayId: "local"
      VpcEndpointId: "local"
  EC2SecurityGroup00sg02f6b46c41443e7d9003cur1:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "allows ssh, port 3000 access"
      GroupName: "NodeWebServerSG"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      SecurityGroupIngress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 22
        ToPort: 22
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 3000
        ToPort: 3000
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      Tags:
      - Value: "NodeWebServerSG"
        Key: "Name"
  ElasticLoadBalancingV2Listener00listenerappassignment2lb58e120db28a4492951317fe9325567b100QDPz3:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DeletionPolicy: "Retain"
    Properties:
      Protocol: "HTTP"
      LoadBalancerArn:
        Ref: "ElasticLoadBalancingV2LoadBalancer00loadbalancerappassignment2lb58e120db28a4492900utaMb"
      DefaultActions:
      - TargetGroupArn:
          Ref: "ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tgb3d357c1fe8477e400q1hCB"
        Type: "forward"
        ForwardConfig:
          TargetGroupStickinessConfig:
            Enabled: false
          TargetGroups:
          - TargetGroupArn:
              Ref: "ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tgb3d357c1fe8477e400q1hCB"
            Weight: 1
      Port: 80
  EC2Route00rtb0e3327c5663eb64a100bK0gJ:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0e3327c5663eb64a100NGCi7"
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId:
        Ref: "EC2InternetGateway00igw0cd3c759ebd09417c00e7emN"
      VpcEndpointId: "igw-0cd3c759ebd09417c"
  EC2VolumeAttachment00vol07efc88a1c4051e5500Ql7ID:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VolumeAttachment"
    DeletionPolicy: "Retain"
    Properties:
      InstanceId: "i-07c3c787aea82e606"
      VolumeId: "vol-07efc88a1c4051e55"
      Device: "/dev/xvda"
  EC2SubnetRouteTableAssociation00rtbassoc017cef495cf725307009u5jk:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0e3327c5663eb64a100NGCi7"
      SubnetId:
        Ref: "EC2Subnet00subnet0eac46ca7987daa3e00QpjDP"
  EC2VolumeAttachment00vol00906589bb0bdefad00QiCIq:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VolumeAttachment"
    DeletionPolicy: "Retain"
    Properties:
      InstanceId: "i-0eb7993525ad88760"
      VolumeId: "vol-00906589bb0bdefad"
      Device: "/dev/xvda"
  EC2NetworkInterface00eni0c23a8d0297dc6dcd00huQoN:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterface"
    DeletionPolicy: "Retain"
    Properties:
      Description: ""
      PrivateIpAddress: "10.0.6.134"
      PrivateIpAddresses:
      - PrivateIpAddress: "10.0.6.134"
        Primary: true
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - "sg-08c633b05333e9245"
      Ipv6Prefixes: []
      SubnetId:
        Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc000wnZ8"
      SourceDestCheck: true
      InterfaceType: "interface"
      Tags: []
  EC2Subnet00subnet0edb10712a7d3c02400nWl5Q:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      MapPublicIpOnLaunch: false
      EnableDns64: false
      AvailabilityZoneId: "use1-az1"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.0.128.0/20"
      Ipv6Native: false
      Tags:
      - Value: "assignment2-subnet-private1-us-east-1a"
        Key: "Name"
  EC2Route00rtb0e3327c5663eb64a100nliAM:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0e3327c5663eb64a100NGCi7"
      DestinationCidrBlock:
        Fn::GetAtt:
        - "EC2VPC00vpc03ab091f2971e59d6008M0us"
        - "CidrBlock"
      GatewayId: "local"
      VpcEndpointId: "local"
  EC2SubnetRouteTableAssociation00rtbassoc0ba7672566f197c8000LL9Ba:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0c4bc7b1b0ad3238000hzzeY"
      SubnetId:
        Ref: "EC2Subnet00subnet0cbfaa0f6986d9ba100aXwjX"
  EC2SubnetRouteTableAssociation00rtbassoc08dd040a4d097fcd700F16Xd:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0e3327c5663eb64a100NGCi7"
      SubnetId:
        Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc000wnZ8"
  EC2Subnet00subnet017bf12d9935bedcc00Zr3t0:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      MapPublicIpOnLaunch: false
      EnableDns64: false
      AvailabilityZoneId: "use1-az2"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.0.144.0/20"
      Ipv6Native: false
      Tags:
      - Value: "assignment2-subnet-private2-us-east-1b"
        Key: "Name"
  EC2SecurityGroup00sg08c633b05333e9245004oK7o:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "allows ssh access"
      GroupName: "BastionSG"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      SecurityGroupIngress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 22
        ToPort: 22
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      Tags:
      - Value: "BastionSG"
        Key: "Name"
  EC2RouteTable00rtb04deb02926f06214400vlp5Q:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      Tags:
      - Value: "assignment2-rtb-private1-us-east-1a"
        Key: "Name"
  EC2SubnetNetworkAclAssociation00aclassoc0756e8493a95c87cb00Ex6wq:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl00acl0bd442c4e60a65a5000sjDiG"
      SubnetId:
        Ref: "EC2Subnet00subnet0a9dec7516571db8800zmx6h"
  EC2VPC00vpc03ab091f2971e59d6008M0us:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPC"
    DeletionPolicy: "Retain"
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: true
      InstanceTenancy: "default"
      EnableDnsHostnames: true
      Tags:
      - Value: "assignment2-vpc"
        Key: "Name"
  ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tgb3d357c1fe8477e400q1hCB:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      HealthCheckIntervalSeconds: 30
      Matcher:
        HttpCode: "200"
      HealthCheckPath: "/"
      Port: 80
      Targets: []
      HealthCheckEnabled: true
      ProtocolVersion: "HTTP1"
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      Name: "assignment2-tg"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      HealthyThresholdCount: 5
      HealthCheckProtocol: "HTTP"
      TargetGroupAttributes:
      - Value: "lb_cookie"
        Key: "stickiness.type"
      - Value: "86400"
        Key: "stickiness.app_cookie.duration_seconds"
      - Value: "1"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.count"
      - Value: "use_load_balancer_configuration"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "86400"
        Key: "stickiness.lb_cookie.duration_seconds"
      - Value: "off"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.percentage"
      - Value: "false"
        Key: "stickiness.enabled"
      - Value: "off"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.percentage"
      - Value: "0"
        Key: "slow_start.duration_seconds"
      - Value: "300"
        Key: "deregistration_delay.timeout_seconds"
      - Value: "1"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.count"
      - Value: "off"
        Key: "load_balancing.algorithm.anomaly_mitigation"
      - Value: ""
        Key: "stickiness.app_cookie.cookie_name"
      - Value: "round_robin"
        Key: "load_balancing.algorithm.type"
      TargetType: "instance"
      HealthCheckPort: "traffic-port"
      Protocol: "HTTP"
      Tags: []
  EC2SubnetNetworkAclAssociation00aclassoc0bad6dd56440e6dd200yeb7a:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl00acl0bd442c4e60a65a5000sjDiG"
      SubnetId:
        Ref: "EC2Subnet00subnet0cbfaa0f6986d9ba100aXwjX"
  EC2Instance00i0eb7993525ad8876000aj1Gh:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Instance"
    DeletionPolicy: "Retain"
    Properties:
      Tenancy: "default"
      SecurityGroups:
      - "dbServerSG"
      PrivateIpAddress: "10.0.128.235"
      UserData: "IyEvYmluL2Jhc2gKc3VkbyBtb25nb2QgLWRicGF0aCBkYiAtLWJpbmRfaXBfYWxs"
      InstanceInitiatedShutdownBehavior: "stop"
      CpuOptions:
        ThreadsPerCore: 1
        CoreCount: 1
      BlockDeviceMappings:
      - Ebs:
          SnapshotId: "snap-05df0f277041b9c8f"
          VolumeType: "gp3"
          Iops: 3000
          VolumeSize: 8
          Encrypted: false
          DeleteOnTermination: true
        DeviceName: "/dev/xvda"
      AvailabilityZone: "us-east-1a"
      PrivateDnsNameOptions:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      SubnetId:
        Ref: "EC2Subnet00subnet0edb10712a7d3c02400nWl5Q"
      SecurityGroupIds:
      - "sg-04ebafea13fce1e9e"
      EbsOptimized: false
      DisableApiTermination: false
      KeyName: "newKeyWeek2"
      SourceDestCheck: true
      Volumes:
      - VolumeId: "vol-00906589bb0bdefad"
        Device: "/dev/xvda"
      PlacementGroupName: ""
      VpcId: "vpc-03ab091f2971e59d6"
      NetworkInterfaces:
      - PrivateIpAddresses:
        - PrivateIpAddress: "10.0.128.235"
          Primary: true
        SecondaryPrivateIpAddressCount: 0
        DeviceIndex: "0"
        GroupSet:
        - Ref: "EC2SecurityGroup00sg04ebafea13fce1e9e00ZhcYw"
        Ipv6Addresses: []
        SubnetId:
          Ref: "EC2Subnet00subnet0edb10712a7d3c02400nWl5Q"
        NetworkInterfaceId:
          Ref: "EC2NetworkInterface00eni08f383d5145d10aca00z2Hsr"
        DeleteOnTermination: true
      ImageId: "ami-04e5276ebb8451442"
      InstanceType: "t2.nano"
      Monitoring: true
      Tags:
      - Value: "Mongo DB WS"
        Key: "Name"
      CreditSpecification:
        CPUCredits: "standard"
  EC2Route00rtb04deb02926f06214400eZmrA:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb04deb02926f06214400vlp5Q"
      DestinationCidrBlock:
        Fn::GetAtt:
        - "EC2VPC00vpc03ab091f2971e59d6008M0us"
        - "CidrBlock"
      GatewayId: "local"
      VpcEndpointId: "local"
  EC2Volume00vol08cff679dc345a25300pQB9M:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Volume"
    DeletionPolicy: "Retain"
    Properties:
      MultiAttachEnabled: false
      SnapshotId: "snap-0356fbc292c328af3"
      VolumeType: "gp3"
      Encrypted: false
      Size: 8
      AutoEnableIO: true
      AvailabilityZone: "us-east-1c"
      Throughput: 125
      Iops: 3000
      Tags: []
  EC2RouteTable00rtb0c4bc7b1b0ad3238000hzzeY:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      Tags:
      - Value: "assignment2-rtb-private3-us-east-1c"
        Key: "Name"
  EC2SubnetRouteTableAssociation00rtbassoc0feff833b13c06bb100ACVzh:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb05c65b04846b1b8e600rXajJ"
      SubnetId:
        Ref: "EC2Subnet00subnet017bf12d9935bedcc00Zr3t0"
  ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tg300035407d6100a881ec002LcRn:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      HealthCheckIntervalSeconds: 30
      Matcher:
        HttpCode: "200"
      HealthCheckPath: "/"
      Port: 3000
      Targets:
      - Port: 3000
        Id: "i-068e601d02194bf69"
      HealthCheckEnabled: true
      ProtocolVersion: "HTTP1"
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      Name: "assignment2-tg-3000"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      HealthyThresholdCount: 5
      HealthCheckProtocol: "HTTP"
      TargetGroupAttributes:
      - Value: "lb_cookie"
        Key: "stickiness.type"
      - Value: "86400"
        Key: "stickiness.app_cookie.duration_seconds"
      - Value: "1"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.count"
      - Value: "use_load_balancer_configuration"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "86400"
        Key: "stickiness.lb_cookie.duration_seconds"
      - Value: "off"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.percentage"
      - Value: "false"
        Key: "stickiness.enabled"
      - Value: "off"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.percentage"
      - Value: "0"
        Key: "slow_start.duration_seconds"
      - Value: "300"
        Key: "deregistration_delay.timeout_seconds"
      - Value: "1"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.count"
      - Value: "off"
        Key: "load_balancing.algorithm.anomaly_mitigation"
      - Value: ""
        Key: "stickiness.app_cookie.cookie_name"
      - Value: "round_robin"
        Key: "load_balancing.algorithm.type"
      TargetType: "instance"
      HealthCheckPort: "traffic-port"
      Protocol: "HTTP"
      Tags:
      - Value: "assignment2-tg-3000"
        Key: "Name"
  EC2VolumeAttachment00vol08cff679dc345a25300cLc1z:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VolumeAttachment"
    DeletionPolicy: "Retain"
    Properties:
      InstanceId: "i-068e601d02194bf69"
      VolumeId: "vol-08cff679dc345a253"
      Device: "/dev/xvda"
  EC2SecurityGroup00sg04ebafea13fce1e9e00ZhcYw:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "allows ssh, http, https, mongo access"
      GroupName: "dbServerSG"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      SecurityGroupIngress:
      - IpProtocol: "tcp"
        FromPort: 1433
        SourceSecurityGroupId: "sg-0f993ec81621d3d95"
        ToPort: 1433
        SourceSecurityGroupOwnerId: "635638247318"
      - IpProtocol: "tcp"
        FromPort: 22
        SourceSecurityGroupId: "sg-08c633b05333e9245"
        ToPort: 22
        SourceSecurityGroupOwnerId: "635638247318"
      - IpProtocol: "tcp"
        FromPort: 27017
        SourceSecurityGroupId: "sg-0f993ec81621d3d95"
        ToPort: 27017
        SourceSecurityGroupOwnerId: "635638247318"
      - IpProtocol: "tcp"
        FromPort: 27017
        SourceSecurityGroupId: "sg-02f6b46c41443e7d9"
        ToPort: 27017
        SourceSecurityGroupOwnerId: "635638247318"
      - IpProtocol: "tcp"
        FromPort: 3306
        SourceSecurityGroupId: "sg-0f993ec81621d3d95"
        ToPort: 3306
        SourceSecurityGroupOwnerId: "635638247318"
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      Tags:
      - Value: "dbServerSG"
        Key: "Name"
  EC2Subnet00subnet0eac46ca7987daa3e00QpjDP:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      MapPublicIpOnLaunch: true
      EnableDns64: false
      AvailabilityZoneId: "use1-az2"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.0.16.0/20"
      Ipv6Native: false
      Tags:
      - Value: "assignment2-subnet-public2-us-east-1b"
        Key: "Name"
  ElasticLoadBalancingV2Listener00listenerappassignment2lb58e120db28a44929f4a49d19e19363cb00yRdwJ:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DeletionPolicy: "Retain"
    Properties:
      MutualAuthentication:
        Mode: "off"
      SslPolicy: "ELBSecurityPolicy-TLS13-1-2-2021-06"
      LoadBalancerArn:
        Ref: "ElasticLoadBalancingV2LoadBalancer00loadbalancerappassignment2lb58e120db28a4492900utaMb"
      DefaultActions:
      - Order: 1
        TargetGroupArn:
          Ref: "ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tgb3d357c1fe8477e400q1hCB"
        Type: "forward"
        ForwardConfig:
          TargetGroupStickinessConfig:
            Enabled: false
            DurationSeconds: 3600
          TargetGroups:
          - TargetGroupArn:
              Ref: "ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tgb3d357c1fe8477e400q1hCB"
            Weight: 1
      Port: 443
      Certificates:
      - CertificateArn: "arn:aws:acm:us-east-1:635638247318:certificate/742d2ee2-28b7-42d2-844f-a3a7702c8ce2"
      Protocol: "HTTPS"
  EC2Route00rtb04deb02926f06214400waXvh:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      NatGatewayId:
        Ref: "EC2NatGateway00nat072d4501c44e61ebd00GFesl"
      RouteTableId:
        Ref: "EC2RouteTable00rtb04deb02926f06214400vlp5Q"
      DestinationCidrBlock: "0.0.0.0/0"
  EC2Subnet00subnet0cbfaa0f6986d9ba100aXwjX:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      MapPublicIpOnLaunch: false
      EnableDns64: false
      AvailabilityZoneId: "use1-az4"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.0.160.0/20"
      Ipv6Native: false
      Tags:
      - Value: "assignment2-subnet-private3-us-east-1c"
        Key: "Name"
  EC2Route00rtb0c4bc7b1b0ad3238000kX9Qs:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      NatGatewayId:
        Ref: "EC2NatGateway00nat072d4501c44e61ebd00GFesl"
      RouteTableId:
        Ref: "EC2RouteTable00rtb0c4bc7b1b0ad3238000hzzeY"
      DestinationCidrBlock: "0.0.0.0/0"
  EC2Volume00vol07efc88a1c4051e5500LauAZ:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Volume"
    DeletionPolicy: "Retain"
    Properties:
      MultiAttachEnabled: false
      SnapshotId: "snap-05df0f277041b9c8f"
      VolumeType: "gp3"
      Encrypted: false
      Size: 8
      AutoEnableIO: true
      AvailabilityZone: "us-east-1a"
      Throughput: 125
      Iops: 3000
      Tags: []
  EC2RouteTable00rtb0e3327c5663eb64a100NGCi7:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      Tags:
      - Value: "assignment2-rtb-public"
        Key: "Name"
  EC2SubnetNetworkAclAssociation00aclassoc05355a1c1c6f4c56400NSFRL:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl00acl0bd442c4e60a65a5000sjDiG"
      SubnetId:
        Ref: "EC2Subnet00subnet0eac46ca7987daa3e00QpjDP"
  EC2NatGateway00nat072d4501c44e61ebd00GFesl:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NatGateway"
    DeletionPolicy: "Retain"
    Properties:
      PrivateIpAddress: "10.0.5.3"
      ConnectivityType: "public"
      VpcId: "vpc-03ab091f2971e59d6"
      EniId: "eni-015b8f3c86c5cc70f"
      AllocationId: "eipalloc-078fe67a166eb8fd6"
      SubnetId:
        Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc000wnZ8"
      Tags:
      - Value: "assignment2-nat-public1-us-east-1a"
        Key: "Name"
  ElasticLoadBalancingV2Listener00listenerappassignment2lb58e120db28a44929af9fe29295b9526d00rrtfa:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DeletionPolicy: "Retain"
    Properties:
      Protocol: "HTTP"
      LoadBalancerArn:
        Ref: "ElasticLoadBalancingV2LoadBalancer00loadbalancerappassignment2lb58e120db28a4492900utaMb"
      DefaultActions:
      - Order: 1
        TargetGroupArn:
          Ref: "ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tg300035407d6100a881ec002LcRn"
        Type: "forward"
        ForwardConfig:
          TargetGroupStickinessConfig:
            Enabled: false
            DurationSeconds: 3600
          TargetGroups:
          - TargetGroupArn:
              Ref: "ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tg300035407d6100a881ec002LcRn"
            Weight: 1
      Port: 3000
  EC2SecurityGroup00sg0f993ec81621d3d9500rkjqP:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "allows ssh, http, https access "
      GroupName: "WebServerSG"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      SecurityGroupIngress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 80
        ToPort: 80
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 22
        ToPort: 22
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 443
        ToPort: 443
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
      Tags:
      - Value: "WebServerSG"
        Key: "Name"
  ElasticLoadBalancingV2Listener00listenerappassignment2lb58e120db28a4492920d38e134e150d1c003jbxv:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DeletionPolicy: "Retain"
    Properties:
      MutualAuthentication:
        Mode: "off"
      SslPolicy: "ELBSecurityPolicy-TLS13-1-2-2021-06"
      LoadBalancerArn:
        Ref: "ElasticLoadBalancingV2LoadBalancer00loadbalancerappassignment2lb58e120db28a4492900utaMb"
      DefaultActions:
      - Order: 1
        TargetGroupArn:
          Ref: "ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tg300035407d6100a881ec002LcRn"
        Type: "forward"
        ForwardConfig:
          TargetGroupStickinessConfig:
            Enabled: false
            DurationSeconds: 3600
          TargetGroups:
          - TargetGroupArn:
              Ref: "ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tg300035407d6100a881ec002LcRn"
            Weight: 1
      Port: 3001
      Certificates:
      - CertificateArn: "arn:aws:acm:us-east-1:635638247318:certificate/742d2ee2-28b7-42d2-844f-a3a7702c8ce2"
      Protocol: "HTTPS"
  EC2SubnetNetworkAclAssociation00aclassoc0a0bbb6d8236c9e6500KUrBo:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl00acl0bd442c4e60a65a5000sjDiG"
      SubnetId:
        Ref: "EC2Subnet00subnet0edb10712a7d3c02400nWl5Q"
  EC2RouteTable00rtb0212e25d0da502bf200rPMNH:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
  EC2Subnet00subnet0a9dec7516571db8800zmx6h:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      MapPublicIpOnLaunch: true
      EnableDns64: false
      AvailabilityZoneId: "use1-az4"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "10.0.32.0/20"
      Ipv6Native: false
      Tags:
      - Value: "assignment2-subnet-public3-us-east-1c"
        Key: "Name"
  EC2SubnetRouteTableAssociation00rtbassoc02f08fc8be158d357007ktX6:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb04deb02926f06214400vlp5Q"
      SubnetId:
        Ref: "EC2Subnet00subnet0edb10712a7d3c02400nWl5Q"
  ElasticLoadBalancingV2LoadBalancer00loadbalancerappassignment2lb58e120db28a4492900utaMb:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      SecurityGroups:
      - "sg-05ae7e01502c41358"
      LoadBalancerAttributes:
      - Value: ""
        Key: "access_logs.s3.prefix"
      - Value: "append"
        Key: "routing.http.xff_header_processing.mode"
      - Value: "true"
        Key: "routing.http2.enabled"
      - Value: "false"
        Key: "waf.fail_open.enabled"
      - Value: ""
        Key: "connection_logs.s3.bucket"
      - Value: "false"
        Key: "access_logs.s3.enabled"
      - Value: "defensive"
        Key: "routing.http.desync_mitigation_mode"
      - Value: ""
        Key: "connection_logs.s3.prefix"
      - Value: "false"
        Key: "routing.http.x_amzn_tls_version_and_cipher_suite.enabled"
      - Value: "false"
        Key: "routing.http.preserve_host_header.enabled"
      - Value: "true"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "false"
        Key: "routing.http.xff_client_port.enabled"
      - Value: ""
        Key: "access_logs.s3.bucket"
      - Value: "false"
        Key: "deletion_protection.enabled"
      - Value: "3600"
        Key: "client_keep_alive.seconds"
      - Value: "false"
        Key: "routing.http.drop_invalid_header_fields.enabled"
      - Value: "false"
        Key: "connection_logs.s3.enabled"
      - Value: "60"
        Key: "idle_timeout.timeout_seconds"
      Subnets:
      - Ref: "EC2Subnet00subnet0a9dec7516571db8800zmx6h"
      - Ref: "EC2Subnet00subnet0eac46ca7987daa3e00QpjDP"
      - Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc000wnZ8"
      Type: "application"
      Scheme: "internet-facing"
      EnforceSecurityGroupInboundRulesOnPrivateLinkTraffic: ""
      Tags: []
      Name: "assignment2-lb"
      SubnetMappings:
      - SubnetId:
          Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc000wnZ8"
      - SubnetId:
          Ref: "EC2Subnet00subnet0a9dec7516571db8800zmx6h"
      - SubnetId:
          Ref: "EC2Subnet00subnet0eac46ca7987daa3e00QpjDP"
  EC2Route00rtb0212e25d0da502bf200l7yMT:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable00rtb0212e25d0da502bf200rPMNH"
      DestinationCidrBlock:
        Fn::GetAtt:
        - "EC2VPC00vpc03ab091f2971e59d6008M0us"
        - "CidrBlock"
      GatewayId: "local"
      VpcEndpointId: "local"
  EC2Volume00vol00906589bb0bdefad001GUiy:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Volume"
    DeletionPolicy: "Retain"
    Properties:
      MultiAttachEnabled: false
      SnapshotId: "snap-05df0f277041b9c8f"
      VolumeType: "gp3"
      Encrypted: false
      Size: 8
      AutoEnableIO: true
      AvailabilityZone: "us-east-1a"
      Throughput: 125
      Iops: 3000
      Tags: []
  EC2Instance00i07c3c787aea82e60600ZditM:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Instance"
    DeletionPolicy: "Retain"
    Properties:
      Tenancy: "default"
      SecurityGroups:
      - "BastionSG"
      PrivateIpAddress: "10.0.6.134"
      InstanceInitiatedShutdownBehavior: "stop"
      CpuOptions:
        ThreadsPerCore: 1
        CoreCount: 1
      BlockDeviceMappings:
      - Ebs:
          SnapshotId: "snap-05df0f277041b9c8f"
          VolumeType: "gp3"
          Iops: 3000
          VolumeSize: 8
          Encrypted: false
          DeleteOnTermination: true
        DeviceName: "/dev/xvda"
      AvailabilityZone: "us-east-1a"
      PrivateDnsNameOptions:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      SubnetId:
        Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc000wnZ8"
      SecurityGroupIds:
      - "sg-08c633b05333e9245"
      EbsOptimized: false
      DisableApiTermination: false
      KeyName: "newKeyWeek2"
      SourceDestCheck: true
      Volumes:
      - VolumeId: "vol-07efc88a1c4051e55"
        Device: "/dev/xvda"
      PlacementGroupName: ""
      VpcId: "vpc-03ab091f2971e59d6"
      NetworkInterfaces:
      - PrivateIpAddresses:
        - PrivateIpAddress: "10.0.6.134"
          Primary: true
        SecondaryPrivateIpAddressCount: 0
        DeviceIndex: "0"
        GroupSet:
        - Ref: "EC2SecurityGroup00sg08c633b05333e9245004oK7o"
        Ipv6Addresses: []
        SubnetId:
          Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc000wnZ8"
        AssociatePublicIpAddress: true
        NetworkInterfaceId:
          Ref: "EC2NetworkInterface00eni0c23a8d0297dc6dcd00huQoN"
        DeleteOnTermination: true
      ImageId: "ami-04e5276ebb8451442"
      InstanceType: "t2.nano"
      Monitoring: true
      Tags:
      - Value: "Bastion WS"
        Key: "Name"
      CreditSpecification:
        CPUCredits: "standard"
  EC2Instance00i068e601d02194bf6900hKbw7:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Instance"
    DeletionPolicy: "Retain"
    Properties:
      Tenancy: "default"
      SecurityGroups:
      - "NodeWebServerSG"
      PrivateIpAddress: "10.0.45.199"
      UserData: "IyEvYmluL2Jhc2gKCmVjaG8gIjxiPkluc3RhbmNlIElEOjwvYj4gIiA+IC92YXIvd3d3L2h0bWwvaWQuaHRtbApUT0tFTj1gY3VybCAtWCBQVVQgImh0dHA6Ly8xNjkuMjU0LjE2OS4yNTQvbGF0ZXN0L2FwaS90b2tlbiIgLUggIlgtYXdzLWVjMi1tZXRhZGF0YS10b2tlbi10dGwtc2Vjb25kczogMjE2MDAiYApjdXJsIC1IICJYLWF3cy1lYzItbWV0YWRhdGEtdG9rZW46ICRUT0tFTiIKaHR0cDovLzE2OS4yNTQuMTY5LjI1NC9sYXRlc3QvbWV0YS1kYXRhL2luc3RhbmNlLWlkLyA+PiAvdmFyL3d3dy9odG1sL2lkLmh0bWwKCnN1ZG8gLXUgZWMyLXVzZXIgYmFzaCAtYyAnL2hvbWUvZWMyLXVzZXIvc3RhcnQtbXlhcHAuc2gn"
      BlockDeviceMappings:
      - Ebs:
          SnapshotId: "snap-0356fbc292c328af3"
          VolumeType: "gp3"
          Iops: 3000
          VolumeSize: 8
          Encrypted: false
          DeleteOnTermination: true
        DeviceName: "/dev/xvda"
      SubnetId:
        Ref: "EC2Subnet00subnet0a9dec7516571db8800zmx6h"
      EbsOptimized: false
      Volumes:
      - VolumeId: "vol-08cff679dc345a253"
        Device: "/dev/xvda"
      LaunchTemplate:
        Version: "1"
        LaunchTemplateName: "assignment2-node-cloudwatch-lb-lt"
      NetworkInterfaces:
      - PrivateIpAddresses:
        - PrivateIpAddress: "10.0.45.199"
          Primary: true
        SecondaryPrivateIpAddressCount: 0
        DeviceIndex: "0"
        GroupSet:
        - Ref: "EC2SecurityGroup00sg02f6b46c41443e7d9003cur1"
        Ipv6Addresses: []
        SubnetId:
          Ref: "EC2Subnet00subnet0a9dec7516571db8800zmx6h"
        AssociatePublicIpAddress: true
        NetworkInterfaceId:
          Ref: "EC2NetworkInterface00eni012ed05273bbd306d00YDRR3"
        DeleteOnTermination: true
      ImageId: "ami-092a08878b23c25e9"
      InstanceType: "t2.nano"
      Monitoring: true
      Tags:
      - Value: "Node auto-scaled instance"
        Key: "Name"
      InstanceInitiatedShutdownBehavior: "stop"
      CpuOptions:
        ThreadsPerCore: 1
        CoreCount: 1
      AvailabilityZone: "us-east-1c"
      PrivateDnsNameOptions:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      SecurityGroupIds:
      - "sg-02f6b46c41443e7d9"
      DisableApiTermination: false
      KeyName: "newKeyWeek2"
      SourceDestCheck: true
      PlacementGroupName: ""
      VpcId: "vpc-03ab091f2971e59d6"
      CreditSpecification:
        CPUCredits: "standard"
  EC2RouteTable00rtb05c65b04846b1b8e600rXajJ:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      Tags:
      - Value: "assignment2-rtb-private2-us-east-1b"
        Key: "Name"
  EC2NetworkInterface00eni012ed05273bbd306d00YDRR3:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterface"
    DeletionPolicy: "Retain"
    Properties:
      Description: ""
      PrivateIpAddress: "10.0.45.199"
      PrivateIpAddresses:
      - PrivateIpAddress: "10.0.45.199"
        Primary: true
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - "sg-02f6b46c41443e7d9"
      Ipv6Prefixes: []
      SubnetId:
        Ref: "EC2Subnet00subnet0a9dec7516571db8800zmx6h"
      SourceDestCheck: true
      InterfaceType: "interface"
      Tags: []
  EC2SecurityGroup00sg038184bc6bdc2617d00qli7Z:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "default VPC security group"
      GroupName: "default"
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      SecurityGroupIngress:
      - IpProtocol: "-1"
        FromPort: -1
        SourceSecurityGroupId:
          Fn::GetAtt:
          - "EC2VPC00vpc03ab091f2971e59d6008M0us"
          - "DefaultSecurityGroup"
        ToPort: -1
        SourceSecurityGroupOwnerId: "635638247318"
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  EC2SubnetNetworkAclAssociation00aclassoc00b59a86c145e131100kqWV0:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl00acl0bd442c4e60a65a5000sjDiG"
      SubnetId:
        Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc000wnZ8"
  EC2VPCDHCPOptionsAssociation00vpc03ab091f2971e59d600s86rv:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPCDHCPOptionsAssociation"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC00vpc03ab091f2971e59d6008M0us"
      DhcpOptionsId:
        Ref: "EC2DHCPOptions00dopt015de2090e3cc2b1600ySD7d"
  EC2Route00rtb05c65b04846b1b8e6003cJct:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      NatGatewayId:
        Ref: "EC2NatGateway00nat072d4501c44e61ebd00GFesl"
      RouteTableId:
        Ref: "EC2RouteTable00rtb05c65b04846b1b8e600rXajJ"
      DestinationCidrBlock: "0.0.0.0/0"
  AutoScalingAutoScalingGroup00assignment2asg00CGbCX:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::AutoScaling::AutoScalingGroup"
    DeletionPolicy: "Retain"
    Properties:
      LoadBalancerNames: []
      ServiceLinkedRoleARN: "arn:aws:iam::635638247318:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling"
      TargetGroupARNs:
      - Ref: "ElasticLoadBalancingV2TargetGroup00targetgroupassignment2tg300035407d6100a881ec002LcRn"
      Cooldown: "300"
      AvailabilityZones:
      - "us-east-1a"
      - "us-east-1b"
      - "us-east-1c"
      DesiredCapacity: "1"
      HealthCheckGracePeriod: 30
      MetricsCollection:
      - Granularity: "1Minute"
        Metrics:
        - "WarmPoolMinSize"
        - "GroupAndWarmPoolTotalCapacity"
        - "GroupDesiredCapacity"
        - "GroupPendingInstances"
        - "WarmPoolPendingCapacity"
        - "GroupInServiceCapacity"
        - "WarmPoolTotalCapacity"
        - "GroupMinSize"
        - "GroupInServiceInstances"
        - "WarmPoolTerminatingCapacity"
        - "WarmPoolWarmedCapacity"
        - "GroupTerminatingInstances"
        - "GroupPendingCapacity"
        - "GroupTotalCapacity"
        - "GroupStandbyInstances"
        - "GroupMaxSize"
        - "GroupAndWarmPoolDesiredCapacity"
        - "WarmPoolDesiredCapacity"
        - "GroupTerminatingCapacity"
        - "GroupTotalInstances"
        - "GroupStandbyCapacity"
      MaxSize: "3"
      NewInstancesProtectedFromScaleIn: false
      MinSize: "1"
      TerminationPolicies:
      - "Default"
      LaunchTemplate:
        Version: "$Default"
        LaunchTemplateName: "assignment2-node-cloudwatch-lb-lt"
        LaunchTemplateId: "lt-0ccdbe84489651b95"
      AutoScalingGroupName: "assignment2-asg"
      VPCZoneIdentifier:
      - Ref: "EC2Subnet00subnet0a9dec7516571db8800zmx6h"
      - Ref: "EC2Subnet00subnet0eac46ca7987daa3e00QpjDP"
      - Ref: "EC2Subnet00subnet0d07ba7c6b47d43fc000wnZ8"
      Tags:
      - Value: "Node auto-scaled instance"
        Key: "Name"
        PropagateAtLaunch: true
      HealthCheckType: "EC2"
